Fix name overflow on iPhone, center social icons on tablet/mobile

--- a/src/assets/styles/Main.scss
+++ b/src/assets/styles/Main.scss
@@ -149,6 +149,7 @@
         padding-top: 10px;
         display: flex !important;
         flex-direction: row;
+        justify-content: center;
         gap: 10px;
         color: white;
 
